fix: add tests, change textFormatter

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "types": ["jest"],
+    "target": "es2019", 
     "lib": ["es2019", "dom"],
     "esModuleInterop": true,
   },
