fix: change build

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -6,3 +6,12 @@ test:
 
 test-this: 
 	npx jest src/tests/textFormatter.test.ts
+
+build:
+	npm run build
+
+lint: 
+	npm run lint
+
+lint-fix: 
+	npm run lint --fix
